[gd_scene load_steps=5 format=3 uid="uid://be4b7lb0lpee8"]

[ext_resource type="Script" path="res://Scenes/OrderBoard/order_turn_in_interface.gd" id="1_e1yg3"]
[ext_resource type="PackedScene" uid="uid://b2tnm3jrgkqan" path="res://UI/Inventory/inventory_interface.tscn" id="2_iwdrm"]
[ext_resource type="Script" path="res://Resources/Inventories/inventory.gd" id="3_16ham"]

[sub_resource type="Resource" id="Resource_r4an1"]
resource_local_to_scene = true
script = ExtResource("3_16ham")
items = Array[Resource("res://Resources/Items/item.gd")]([])
num_slots = 50

[node name="OrderTurnInInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_e1yg3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="InventoryInterface" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_iwdrm")]
layout_mode = 2
inventory = null
title = "Your Inventory"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[center]Items to turn in:
ITEMS
[/center]"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="ButtonCancel" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="ButtonTurnIn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
size_flags_horizontal = 10
disabled = true
text = "Turn in"

[node name="InventoryInterface2" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_iwdrm")]
layout_mode = 2
inventory = SubResource("Resource_r4an1")
title = "Turn in items"
inv_source = 7

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/ButtonCancel" to="." method="_on_button_cancel_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/ButtonTurnIn" to="." method="_on_button_turn_in_pressed"]
[connection signal="inventory_changed" from="MarginContainer/HBoxContainer/InventoryInterface2" to="." method="_on_inventory_interface_2_inventory_changed"]
